--- a/front-end/src/app/main-menu/main-menu.component.html
+++ b/front-end/src/app/main-menu/main-menu.component.html
@@ -1,15 +1,7 @@
 <div *ngIf="games">
   <div class="game-list">
     <ng-container *ngFor="let game of games.games">
-      <div [style.background-color]="getColor(game)" class="game">
-        <img class="icon" [src]="getRankIcon(game[3])" />
-        <img class="icon" [src]="getAgentIcon(game[2])" />
-        <div class="kda">{{ game[5] }} / {{ game[6] }} / {{ game[7] }}</div>
-
-        <div *ngIf="game[11] !== 'N/A'">
-          <a [href]="game[11]">VOD</a>
-        </div>
-      </div>
+      <app-game-card [game]="game"> </app-game-card>
     </ng-container>
   </div>
 </div>
