--- a/front-end/src/styles.scss
+++ b/front-end/src/styles.scss
@@ -1,5 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
 @import url("https://fonts.googleapis.com/css2?family=Lexend+Peta&display=swap");
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
+@import "@angular/material/prebuilt-themes/deeppurple-amber.css";
+
+html {
+  background-color: #505050;
+}
+
+.circular {
+  border-radius: 50%;
+}
 
 .game-list {
   display: flex;
@@ -18,8 +28,7 @@
 }
 
 .kda {
-  padding-top: 15px;
-  padding-left: 50px;
+  margin: auto;
   font-size: 50px;
   font-family: "Lexend Peta", sans-serif;
 }
