profile card component updates + loading animation

--- a/front-end/src/app/game-card/game-card.component.html
+++ b/front-end/src/app/game-card/game-card.component.html
@@ -1,5 +1,6 @@
 <div
   [style.background-color]="getColor(game)"
+  [style.border]="getOutline(game)"
   (click)="viewSingleGame(game)"
   class="game"
 >
