--- a/front-end/src/styles.scss
+++ b/front-end/src/styles.scss
@@ -2,9 +2,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Lexend+Peta&display=swap");
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 @import "@angular/material/prebuilt-themes/deeppurple-amber.css";
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Righteous&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bree+Serif&family=Righteous&display=swap");
 
 html {
-  background-color: #505050;
+  background: #606060;
 }
 
 .circular {
