--- a/front-end/src/app/main-menu/main-menu.component.html
+++ b/front-end/src/app/main-menu/main-menu.component.html
@@ -1,14 +1,17 @@
 <div class="main-menu">
-  <div class="side-menu">
-    <ng-container *ngIf="stats">
+  <ng-container *ngIf="stats && games">
+    <div class="side-menu">
       <app-profile-card [stats]="stats"></app-profile-card>
-    </ng-container>
-  </div>
-  <div *ngIf="games">
+    </div>
     <div class="game-list">
       <ng-container *ngFor="let game of games.games">
         <app-game-card [game]="game"> </app-game-card>
       </ng-container>
     </div>
-  </div>
+  </ng-container>
+  <ng-conatiner *ngIf="!stats || !games">
+    <div class="center">
+      <mat-spinner color="accent"></mat-spinner>
+    </div>
+  </ng-conatiner>
 </div>
