--- a/front-end/src/app/main-menu/main-menu.component.scss
+++ b/front-end/src/app/main-menu/main-menu.component.scss
@@ -9,3 +9,10 @@
   width: 50vw;
   max-width: 700px;
 }
+
+.center {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 90vh;
+}
