appease type errors

--- a/front-end/src/app/main-menu/main-menu.component.html
+++ b/front-end/src/app/main-menu/main-menu.component.html
@@ -9,9 +9,9 @@
       </ng-container>
     </div>
   </ng-container>
-  <ng-conatiner *ngIf="!stats || !games">
+  <ng-container *ngIf="!stats || !games">
     <div class="center">
       <mat-spinner color="accent"></mat-spinner>
     </div>
-  </ng-conatiner>
+  </ng-container>
 </div>
