Pagination, color tweaks, loading animation for single games

--- a/front-end/src/app/detail-view/detail-view.component.html
+++ b/front-end/src/app/detail-view/detail-view.component.html
@@ -17,3 +17,9 @@
     </ng-container>
   </div>
 </div>
+
+<div class="spinner-center-horizontal" *ngIf="!game">
+  <div class="spinner-center-vertical">
+    <mat-spinner color="accent"></mat-spinner>
+  </div>
+</div>
