--- a/front-end/src/app/game-card/game-card.component.scss
+++ b/front-end/src/app/game-card/game-card.component.scss
@@ -11,4 +11,9 @@
 .video {
   margin-left: auto;
   padding: 10px;
+  text-align: right;
+}
+
+.date {
+  font-family: "Lexend Peta", sans-serif;
 }
