--- a/front-end/src/styles.scss
+++ b/front-end/src/styles.scss
@@ -5,9 +5,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Righteous&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Bree+Serif&family=Righteous&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@900&display=swap");
 
 html {
-  background: #606060;
+  background: #62757f;
 }
 
 .circular {
