--- a/front-end/src/app/detail-view/detail-view.component.scss
+++ b/front-end/src/app/detail-view/detail-view.component.scss
@@ -22,3 +22,17 @@
 .video-player {
   padding-top: 50px;
 }
+
+.spinner-center-horizontal {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.spinner-center-vertical {
+  height: 90vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
