Refactor frontend to use environments file

--- a/front-end/src/app/profile-card/profile-card.component.html
+++ b/front-end/src/app/profile-card/profile-card.component.html
@@ -2,7 +2,7 @@
   <img class="pfp circular" [src]="getAgentIcon(stats.favorite_agent)" />
 
   <div class="stats">
-    <div class="username">WOOHOOJIN</div>
+    <div class="username">{{ username }}</div>
     <mat-divider></mat-divider>
     <div class="winrate">
       {{ stats.wins }}W {{ stats.losses }}L
